# secure-dti

./: .gitignore  README.md  ecg_evaluate.sh  ecg_fetch_data.sh  ecg_remove_cache.sh  ecg_share_data.sh  ecg_share_data_original.sh  ecg_share_data_small.sh  ecg_train.sh  ecg_train_demo.sh  ecg_train_new.sh  ecg_train_original.sh  erase_cache.sh  evaluate_ecg.sh  evaluate_ecg_new.sh  mnist_share_data.sh  rc_share_data.sh  rc_train.sh  share_data_ecg.sh  train_demo.sh  train_ecg.sh  train_ecg_original.sh  train_mnist.sh  train_rc.sh  train_tte.sh  tte_share_data.sh  tte_share_data_128bit.sh  tte_train.sh  tte_train_128bit.sh  unit_test.sh
mpc/code/: CMakeLists.txt  GenerateKey.cpp  Makefile  ShareDataECG.cpp  ShareDataMNIST.cpp  ShareDataRC.cpp  ShareDataTTE.cpp  TrainSecureECG.cpp  TrainSecureECG_bak_20200130.cpp  TrainSecureECG_bak_2020_0131.cpp  TrainSecureMNIST.cpp  TrainSecureRC.cpp  TrainSecureTTE.cpp  UnitTestClient.cpp  aesstream.cpp  boost_test.cpp  global.h  mpc.cpp  mpc.h  mpc_int.cpp  mpc_int.h  param.cpp  param.h  protocol.h  protocol_int.h  read_compressed_data.cpp  read_data.cpp  sigmoid_approx_32_linear.txt  sigmoid_approx_64_linear.txt  sigmoid_approx_64_linear_bak.txt  socket.h  test.cpp  util.h  util_int.h
mpc/code/include/Eigen/: Core  Geometry  KLUSupport  QtAlignedMalloc
mpc/code/include/Eigen/src/Cholesky/: LDLT.h  LLT.h
mpc/code/include/Eigen/src/CholmodSupport/: CholmodSupport.h
mpc/code/include/Eigen/src/Core/: ArithmeticSequence.h  Array.h  ArrayBase.h  ArrayWrapper.h  Assign.h  AssignEvaluator.h  Assign_MKL.h  BandMatrix.h  Block.h  BooleanRedux.h  CommaInitializer.h  ConditionEstimator.h  CoreEvaluators.h  CoreIterators.h  CwiseBinaryOp.h  CwiseNullaryOp.h  CwiseTernaryOp.h  CwiseUnaryView.h  DenseBase.h  DenseCoeffsBase.h  DenseStorage.h  Diagonal.h  DiagonalMatrix.h  DiagonalProduct.h  Dot.h  EigenBase.h  ForceAlignedAccess.h  Fuzzy.h  GeneralProduct.h  GenericPacketMath.h  GlobalFunctions.h  IO.h  IndexedView.h  Inverse.h  Map.h  MapBase.h  MathFunctions.h  MathFunctionsImpl.h  Matrix.h  MatrixBase.h  (+31 more)
mpc/code/include/Eigen/src/Eigenvalues/: ComplexEigenSolver.h  ComplexSchur.h  EigenSolver.h  GeneralizedEigenSolver.h  GeneralizedSelfAdjointEigenSolver.h  HessenbergDecomposition.h  MatrixBaseEigenvalues.h  RealQZ.h  RealSchur.h  SelfAdjointEigenSolver.h  Tridiagonalization.h
mpc/code/include/Eigen/src/Geometry/: AlignedBox.h  AngleAxis.h  EulerAngles.h  Homogeneous.h  Hyperplane.h  OrthoMethods.h  ParametrizedLine.h  Quaternion.h  Rotation2D.h  RotationBase.h  Scaling.h  Transform.h  Translation.h  Umeyama.h
mpc/code/include/Eigen/src/Householder/: BlockHouseholder.h  Householder.h  HouseholderSequence.h
mpc/code/include/Eigen/src/IterativeLinearSolvers/: BasicPreconditioners.h  BiCGSTAB.h  ConjugateGradient.h  IncompleteCholesky.h  IncompleteLUT.h  IterativeSolverBase.h  LeastSquareConjugateGradient.h  SolveWithGuess.h
mpc/code/include/Eigen/src/Jacobi/: Jacobi.h
mpc/code/include/Eigen/src/KLUSupport/: KLUSupport.h
mpc/code/include/Eigen/src/SVD/: BDCSVD.h  (+3 more)
(+199 files in other folders)
